--- a/diary/diary.html
+++ b/diary/diary.html
@@ -26,6 +26,7 @@ th {
 td {  
     background: #FAFAFA;
     text-align: center;
+    padding: 15px;
 }
 
 /* Cells in even rows (2,4,6...) are one color */        
@@ -63,7 +64,7 @@ tr td:hover { background: #666; color: #FFF; }
    <tbody>
     <tr>
      <td>
-      2016-11-16
+      2017-11-16
      </td>
      <td>
       Filled out PPR
@@ -82,7 +83,7 @@ tr td:hover { background: #666; color: #FFF; }
     </tr>
     <tr>
      <td>
-      2016-11-23
+      2017-11-23
      </td>
      <td>
       Decided in what format to store this diary and then created it
@@ -99,13 +100,208 @@ tr td:hover { background: #666; color: #FFF; }
     </tr>
     <tr>
      <td>
-      2016-11-23
+      2017-11-23
      </td>
      <td>
       Wrote a short script to display the diary in HTML form
      </td>
      <td>
       Making this convenient and debugging/considering libraries
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-04
+     </td>
+     <td>
+      Worked through the material on researching and referencing (AO2) from the sharepoint (to catch up on missed lesson)
+     </td>
+     <td>
+      Not sure what the abbreviations should be used for
+     </td>
+     <td>
+      EP sharepoint
+     </td>
+     <td>
+      Set up BibTeX bibliography
+     </td>
+     <td>
+      (This was entered on 12-07)
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-06
+     </td>
+     <td>
+      Set up the .bib files and pipeline for building the dissertation
+     </td>
+     <td>
+      Properly compiling LaTeX files
+     </td>
+     <td>
+      Stackoverflow
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-07
+     </td>
+     <td>
+      Evaluated some previous pupils' EPs - found out that lots of marks are awarded for things other than actual writing
+     </td>
+     <td>
+      Project 3 - Baking...
+     </td>
+     <td>
+      How the marking actually works
+     </td>
+     <td>
+      Expand my own timescale/diary and PPR
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-14
+     </td>
+     <td>
+      Got my dad to peer review my project so far
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+      Continue development + work on gantt chart
+     </td>
+     <td>
+      good diary
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-20
+     </td>
+     <td>
+      Did some research on Hamming codes and took some notes on the application/implementation
+     </td>
+     <td>
+      0-based vs 1-based indexing
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2017-12-30
+     </td>
+     <td>
+      Started planning how to implement a Hamming encoder in binary Python
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-4
+     </td>
+     <td>
+      Started to implement the Hamming encoder
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-4
+     </td>
+     <td>
+      Considered available primary research
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+      Contact Leo\
+     </td>
+     <td>
+      Aylwyn
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-7
+     </td>
+     <td>
+      Completed and implemented test plan for Hamming encoder
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-11
+     </td>
+     <td>
+      Decided on using LaTeX to write my dissertation
+     </td>
+     <td>
+      researched and experimented with different themes
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-22
+     </td>
+     <td>
+      Started to develop the LaTeX document structure and made a rough first draft of dissertation (testing ideas and aesthetics)
+     </td>
+     <td>
      </td>
      <td>
      </td>
