--- a/diary/diary.html
+++ b/diary/diary.html
@@ -278,10 +278,7 @@ tr td:hover { background: #666; color: #FFF; }
       2018-1-11
      </td>
      <td>
-      Decided on using LaTeX to write my dissertation\
-     </td>
-     <td>
-      researched and experimented with different themes
+      Decided on using LaTeX to write my dissertation, researched and experimented with different themes
      </td>
      <td>
      </td>
