diary overhaul and addition

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -52,13 +52,10 @@ tr td:hover { background: #666; color: #FFF; }
      Problems encountered
     </th>
     <th>
-     Sources used
-    </th>
-    <th>
      What next?
     </th>
     <th>
-     Notes
+     Notes if applicable
     </th>
    </thead>
    <tbody>
@@ -71,8 +68,6 @@ tr td:hover { background: #666; color: #FFF; }
      </td>
      <td>
       wasn't yet entirely sure about fine details
-     </td>
-     <td>
      </td>
      <td>
       complete the timescale
@@ -89,11 +84,10 @@ tr td:hover { background: #666; color: #FFF; }
       Decided in what format to store this diary and then created it
      </td>
      <td>
+      Also considered tsv and what date format to use
      </td>
      <td>
-     </td>
-     <td>
-      Improve the timeline
+      Improve the timeline and add to the diary
      </td>
      <td>
      </td>
@@ -109,8 +103,7 @@ tr td:hover { background: #666; color: #FFF; }
       Making this convenient and debugging/considering libraries
      </td>
      <td>
-     </td>
-     <td>
+      Add to the diary and maybe do something similar for timescale
      </td>
      <td>
      </td>
@@ -126,31 +119,10 @@ tr td:hover { background: #666; color: #FFF; }
       Not sure what the abbreviations should be used for
      </td>
      <td>
-      EP sharepoint
-     </td>
-     <td>
-      Set up BibTeX bibliography
+      Start to apply this to my own research
      </td>
      <td>
       (This was entered on 12-07)
-     </td>
-    </tr>
-    <tr>
-     <td>
-      2017-12-06
-     </td>
-     <td>
-      Set up the .bib files and pipeline for building the dissertation
-     </td>
-     <td>
-      Properly compiling LaTeX files
-     </td>
-     <td>
-      Stackoverflow
-     </td>
-     <td>
-     </td>
-     <td>
      </td>
     </tr>
     <tr>
@@ -159,9 +131,6 @@ tr td:hover { background: #666; color: #FFF; }
      </td>
      <td>
       Evaluated some previous pupils' EPs - found out that lots of marks are awarded for things other than actual writing
-     </td>
-     <td>
-      Project 3 - Baking...
      </td>
      <td>
       How the marking actually works
@@ -180,14 +149,12 @@ tr td:hover { background: #666; color: #FFF; }
       Got my dad to peer review my project so far
      </td>
      <td>
+      The timescale and diary can be a little unclear and haven't started dissertation
      </td>
      <td>
+      Try to add more information to each diary entry and perhaps develop a Gantt chart
      </td>
      <td>
-      Continue development + work on gantt chart
-     </td>
-     <td>
-      good diary
      </td>
     </tr>
     <tr>
@@ -201,8 +168,7 @@ tr td:hover { background: #666; color: #FFF; }
       0-based vs 1-based indexing
      </td>
      <td>
-     </td>
-     <td>
+      Start to translate to actual code
      </td>
      <td>
      </td>
@@ -217,8 +183,7 @@ tr td:hover { background: #666; color: #FFF; }
      <td>
      </td>
      <td>
-     </td>
-     <td>
+      Start to implement the binary data formats and algorithms
      </td>
      <td>
      </td>
@@ -231,12 +196,13 @@ tr td:hover { background: #666; color: #FFF; }
       Started to implement the Hamming encoder
      </td>
      <td>
+      Indexing into data vs code
      </td>
      <td>
+      Finish the program and write test plan
      </td>
      <td>
-     </td>
-     <td>
+      Uses list/bit representation
      </td>
     </tr>
     <tr>
@@ -247,14 +213,12 @@ tr td:hover { background: #666; color: #FFF; }
       Considered available primary research
      </td>
      <td>
+      Survey is very much inapplicable here
      </td>
      <td>
+      Contact Leo, Aylwyn
      </td>
      <td>
-      Contact Leo\
-     </td>
-     <td>
-      Aylwyn
      </td>
     </tr>
     <tr>
@@ -265,12 +229,13 @@ tr td:hover { background: #666; color: #FFF; }
       Completed and implemented test plan for Hamming encoder
      </td>
      <td>
+      Remembering/researching how to use unittest
      </td>
      <td>
+      Eventually add some more test cases/use real world or generated data
      </td>
      <td>
-     </td>
-     <td>
+      Start to work more on dissertation/how to present program
      </td>
     </tr>
     <tr>
@@ -281,10 +246,10 @@ tr td:hover { background: #666; color: #FFF; }
       Decided on using LaTeX to write my dissertation, researched and experimented with different themes
      </td>
      <td>
+      Latex workflow (using pdflatex and repeated compilation) and some latex bugs
      </td>
      <td>
-     </td>
-     <td>
+      Start to write the document and look at bibtex
      </td>
      <td>
      </td>
@@ -297,10 +262,106 @@ tr td:hover { background: #666; color: #FFF; }
       Started to develop the LaTeX document structure and made a rough first draft of dissertation (testing ideas and aesthetics)
      </td>
      <td>
+      What font size to use
+     </td>
+     <td>
+      Also consider how diagrams might be incorporated
+     </td>
+     <td>
+      I can reuse some of the things found doing computing assignments
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-25
+     </td>
+     <td>
+      Reviewed progress so far
+     </td>
+     <td>
+      OneDrive didn't really sufficiently reflect what I'd done
+     </td>
+     <td>
+      Fill in bits of diary and upload stuff to OneDrive
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-25
+     </td>
+     <td>
+      Started looking at TikZ to present a mindmap of my project/initial thoughts
+     </td>
+     <td>
+      Using tikz without graphical bugs and realised I wasn't entirely sure how I would present my project as a mindmap
+     </td>
+     <td>
+      Continue to work on mindmap/look at how to include it in dissertation
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-1-29
+     </td>
+     <td>
+      Researched BibTex and set up the .bib file w/ makefile. Got two original sources (see sources.bib)
+     </td>
+     <td>
+      How to cite an "introductory" PDF in bibtex (ended up using @misc)
+     </td>
+     <td>
+      Continue to research and add sources. Also add a source tracker rather than just a bibliography
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-2-1
+     </td>
+     <td>
+      Found two more sources and cited them in .bib file
+     </td>
+     <td>
+      Choosing appropriate tags and figuring out how to cite with bibtex
+     </td>
+     <td>
+      Continue to find sources/think about where the sources can be incorporated in dissertation
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-2-1
+     </td>
+     <td>
+      Retroactively documented problems and approach in diary
+     </td>
+     <td>
+      Frustration with inadvertently incorrect data entry
+     </td>
+     <td>
+      Continue to fully document what I do
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-2-1
+     </td>
+     <td>
+      Updated the Python HTML compiler script to warn of bad csv formatting (to prevent frustration)
      </td>
      <td>
      </td>
      <td>
+      I really want to improve the format and content of my timescale
      </td>
      <td>
      </td>
