fixed quoting issue

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -311,7 +311,7 @@ tr td:hover { background: #666; color: #FFF; }
       Researched BibTex and set up the .bib file w/ makefile. Got two original sources (see sources.bib)
      </td>
      <td>
-      How to cite an "introductory" PDF in bibtex (ended up using @misc)
+      How to cite an introductory-type PDF in bibtex (ended up using @misc)
      </td>
      <td>
       Continue to research and add sources. Also add a source tracker rather than just a bibliography
