added latest diary entries

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -366,6 +366,54 @@ tr td:hover { background: #666; color: #FFF; }
      <td>
      </td>
     </tr>
+    <tr>
+     <td>
+      2018-2-13
+     </td>
+     <td>
+      Found paper on polynomial codes which I took some notes on and then added to my bibliography
+     </td>
+     <td>
+      It seems quite sophisticated and is a little dense
+     </td>
+     <td>
+      At some point consider how these might be implemented
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-2-16
+     </td>
+     <td>
+      Found a good paper on Hadamard codes and did some other research on Hadamard codes
+     </td>
+     <td>
+      The actual paper doesn't seem entirely applicable
+     </td>
+     <td>
+      Implement basic Hadamard codes and isomorph to DNA
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-2-19
+     </td>
+     <td>
+      Started to write the Python code to generate Hadamard matrices
+     </td>
+     <td>
+      Whether to use numpy or make a custom matrix class
+     </td>
+     <td>
+      Write a test suite and complete the code
+     </td>
+     <td>
+     </td>
+    </tr>
    </tbody>
   </table>
  </body>
