finished hadamard matrix programming

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -414,6 +414,22 @@ tr td:hover { background: #666; color: #FFF; }
      <td>
      </td>
     </tr>
+    <tr>
+     <td>
+      2018-3-1
+     </td>
+     <td>
+      Finished the Hadamard matrix program
+     </td>
+     <td>
+      Decided not to use an object oriented model due to the introduced overhead and instead used primitive lists. I also decided to modify the 1/-1 system to be boolean 1/0 as this fits my requirements better
+     </td>
+     <td>
+      Finish the testing scheme
+     </td>
+     <td>
+     </td>
+    </tr>
    </tbody>
   </table>
  </body>
