added more sources, hadamard program and harvard citations

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -428,6 +428,7 @@ tr td:hover { background: #666; color: #FFF; }
       Finish the testing scheme
      </td>
      <td>
+      I also found another more appropriate source to use for hadamard codes
      </td>
     </tr>
    </tbody>
