--- a/diary/diary.html
+++ b/diary/diary.html
@@ -431,6 +431,53 @@ tr td:hover { background: #666; color: #FFF; }
       I also found another more appropriate source to use for hadamard codes
      </td>
     </tr>
+    <tr>
+     <td>
+      2018-3-7
+     </td>
+     <td>
+      Signed up for a JSTOR account under the school network after finding out that could be done on the library sharepoint
+     </td>
+     <td>
+     </td>
+     <td>
+      Use this to find more papers and see if any existing sources I have are on there so I can use JSTOR to cite them
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-3-7
+     </td>
+     <td>
+      Found a number of papers on Hadamard codes and polynomial codes
+     </td>
+     <td>
+      Some of them contain some very dense mathematics in niche fields
+     </td>
+     <td>
+      I want to find more sources and also I want to figure out how to use a Harvard style with BibTeX
+     </td>
+     <td>
+     </td>
+    </tr>
+    <tr>
+     <td>
+      2018-3-8
+     </td>
+     <td>
+      I spent a while configuring natbib for use with my dissertation, so now my references and citations are all in the Harvard style
+     </td>
+     <td>
+      There was a conflict between natbib and savetrees with the extreme parameter so I had to change to fullpage
+     </td>
+     <td>
+      Write a Hadamard tester and start to write about Hadamard codes/matrices in dissertation
+     </td>
+     <td>
+     </td>
+    </tr>
    </tbody>
   </table>
  </body>
