changed source tracker and added a few sources

--- a/diary/diary.html
+++ b/diary/diary.html
@@ -478,6 +478,22 @@ tr td:hover { background: #666; color: #FFF; }
      <td>
      </td>
     </tr>
+    <tr>
+     <td>
+      2018-3-9
+     </td>
+     <td>
+      Changed my source tracker so that I now have separate columns for evaluation and content to provide clearer evidence of research
+     </td>
+     <td>
+      I spent about an hour trying to make my LaTeX table pretty (worth it)
+     </td>
+     <td>
+      Start writing the actual evaluations/content summaries for each source
+     </td>
+     <td>
+     </td>
+    </tr>
    </tbody>
   </table>
  </body>
